# AoC2018

./: .gitignore  .gitmodules  LICENSE  main.cpp
day01/: main.cpp
day02/: main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: main.cpp
day05/: CMakeLists.txt  main.cpp
